--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -24,6 +24,7 @@
               <h3>Daniel Clifford</h3>
               <small> Verified Graduate</small>
             </div>
+            <img class="quote" src="images/bg-pattern-quotation.svg">
         </div>
         
         <p class="main-txt">I received a job offer mid-course, and the subjects I learned were current, if not more so, 
@@ -124,7 +125,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Sandy</a>.
   </div>
 </body>
 </html>
